@@ -1,15 +1,0 @@
-; This is a comment.
-
-SCENARIO_BEGIN Sample of a valid query
-RANGE_BEGIN 0 100
-	ENTRY_BEGIN
-	ENTRY_END
-RANGE_END
-RANGE_BEGIN 200 300
-RANGE_END
-
-STEP 1 NOTHING
-STEP 2 NOTHING
-STEP 33 ERROR
-STEP 34 TIMEOUT
-SCENARIO_END
